; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/korg1212/extr_korg1212.c_snd_korg1212_TurnOffIdleMonitor.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/korg1212/extr_korg1212.c_snd_korg1212_TurnOffIdleMonitor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_korg1212 = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_korg1212*)* @snd_korg1212_TurnOffIdleMonitor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_korg1212_TurnOffIdleMonitor(%struct.snd_korg1212* %0) #0 {
  %2 = alloca %struct.snd_korg1212*, align 8
  store %struct.snd_korg1212* %0, %struct.snd_korg1212** %2, align 8
  %3 = load %struct.snd_korg1212*, %struct.snd_korg1212** %2, align 8
  %4 = getelementptr inbounds %struct.snd_korg1212, %struct.snd_korg1212* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.snd_korg1212*, %struct.snd_korg1212** %2, align 8
  %9 = call i32 @snd_korg1212_SendStopAndWait(%struct.snd_korg1212* %8)
  %10 = load %struct.snd_korg1212*, %struct.snd_korg1212** %2, align 8
  %11 = getelementptr inbounds %struct.snd_korg1212, %struct.snd_korg1212* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  br label %12

12:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @snd_korg1212_SendStopAndWait(%struct.snd_korg1212*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
